--- a/client/public/sass/components/_overlay.scss
+++ b/client/public/sass/components/_overlay.scss
@@ -24,6 +24,15 @@
             top: 2%;
         }
 
+        &--heading{
+            font-size: 20px;
+            position: absolute;
+            top: 2%;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+        }
+
         &--content-flex{
             position: absolute;
             top: 50%;
@@ -44,6 +53,54 @@
                     height: 100%;
                 }
             }
+
+            input{
+                padding: 5px 10px;
+                font-size: 18px;
+                border: none;
+            }
+        }
+
+        &--content-flex__close{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            justify-content: space-around;
+            gap: 5%;
+
+            input{
+                padding: 5px 10px;
+                font-size: 18px;
+                border: none;
+            }
+        }
+
+        &--btn-bottom{
+            position: absolute;
+            bottom: 2%;
+            right: 2%;
+
+            background: green;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+
+            cursor: pointer;
+        }
+
+        &--btn-bottom:hover{
+
+            background: white;
+            color: green;
+            border: 1px solid green;
+            padding: 5px 10px;
+            border-radius: 3px;
+
+            cursor: pointer;
         }
     }
 }
