--- a/client/public/style/style.css
+++ b/client/public/style/style.css
@@ -470,6 +470,14 @@ body {
   right: 2%;
   top: 2%;
 }
+.overlay__item--heading {
+  font-size: 20px;
+  position: absolute;
+  top: 2%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
 .overlay__item--content-flex {
   position: absolute;
   top: 50%;
@@ -488,6 +496,45 @@ body {
 .overlay__item--content-flex__btn--image {
   width: 100%;
   height: 100%;
+}
+.overlay__item--content-flex input {
+  padding: 5px 10px;
+  font-size: 18px;
+  border: none;
+}
+.overlay__item--content-flex__close {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: space-around;
+  gap: 5%;
+}
+.overlay__item--content-flex__close input {
+  padding: 5px 10px;
+  font-size: 18px;
+  border: none;
+}
+.overlay__item--btn-bottom {
+  position: absolute;
+  bottom: 2%;
+  right: 2%;
+  background: green;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.overlay__item--btn-bottom:hover {
+  background: white;
+  color: green;
+  border: 1px solid green;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .search-box-container {
